--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="view" content="width=device-width , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <title>bootstrap</title>
     <link rel="stylesheet" href="css/boot.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
